Fix: increase z-index of resize handle

--- a/drag-n-drop-chart-library/src/App.css
+++ b/drag-n-drop-chart-library/src/App.css
@@ -6,6 +6,7 @@ userflow-drag-n-drop {
   margin-left: 20px;
 }
 .react-resizable-handle {
+  z-index: 100;
   border-right: 3px solid rgba(0, 0, 0, 0) !important;
   border-bottom: 3px solid rgba(0, 0, 0, 0) !important;
   opacity: 0;
